--- a/404.html
+++ b/404.html
@@ -7,13 +7,13 @@
 <meta name=keywords content>
 <meta name=description content="Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.">
 <meta name=author content="Andrei Criste">
-<link rel=canonical href=https://cristeandrei.github.io/blog/404.html>
+<link rel=canonical href=//cristeandrei.github.io/blog/404.html>
 <link crossorigin=anonymous href=/blog/assets/css/stylesheet.8b523f1730c922e314350296d83fd666efa16519ca136320a93df674d00b6325.css integrity="sha256-i1I/FzDJIuMUNQKW2D/WZu+hZRnKE2MgqT32dNALYyU=" rel="preload stylesheet" as=style>
-<link rel=icon href=https://cristeandrei.github.io/icons/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=https://cristeandrei.github.io/icons/favicon-16x16.png>
-<link rel=icon type=image/png sizes=32x32 href=https://cristeandrei.github.io/icons/favicon-32x32.png>
-<link rel=apple-touch-icon href=https://cristeandrei.github.io/icons/apple-touch-icon.png>
-<link rel=mask-icon href=https://cristeandrei.github.io/icons/safari-pinned-tab.svg>
+<link rel=icon href=//cristeandrei.github.io/icons/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=//cristeandrei.github.io/icons/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=//cristeandrei.github.io/icons/favicon-32x32.png>
+<link rel=apple-touch-icon href=//cristeandrei.github.io/icons/apple-touch-icon.png>
+<link rel=mask-icon href=//cristeandrei.github.io/icons/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <noscript>
@@ -22,7 +22,7 @@
 </noscript><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://cristeandrei.github.io/blog/404.html">
+<meta property="og:url" content="//cristeandrei.github.io/blog/404.html">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.">
@@ -32,7 +32,7 @@
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://cristeandrei.github.io/blog accesskey=h title="Blog (Alt + H)">Blog</a>
+<a href=//cristeandrei.github.io/blog/ accesskey=h title="Blog (Alt + H)">Blog</a>
 <div class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -40,17 +40,17 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://cristeandrei.github.io/blog/archives title=archives>
+<a href=//cristeandrei.github.io/blog/archives title=archives>
 <span>archives</span>
 </a>
 </li>
 <li>
-<a href=https://cristeandrei.github.io/blog/search title="search (Alt + /)" accesskey=/>
+<a href=//cristeandrei.github.io/blog/search title="search (Alt + /)" accesskey=/>
 <span>search</span>
 </a>
 </li>
 <li>
-<a href=https://cristeandrei.github.io/blog/tags title=tags>
+<a href=//cristeandrei.github.io/blog/tags title=tags>
 <span>tags</span>
 </a>
 </li>
@@ -61,7 +61,7 @@
 <div class=not-found>404</div>
 </main>
 <footer class=footer>
-<span>&copy; 2022 <a href=https://cristeandrei.github.io/blog>Blog</a></span>
+<span>&copy; 2022 <a href=//cristeandrei.github.io/blog/>Blog</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
