--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <meta name=author content="Andrei Criste">
 <link rel=canonical href=//cristeandrei.github.io/blog/>
 <link crossorigin=anonymous href=/blog/assets/css/stylesheet.8b523f1730c922e314350296d83fd666efa16519ca136320a93df674d00b6325.css integrity="sha256-i1I/FzDJIuMUNQKW2D/WZu+hZRnKE2MgqT32dNALYyU=" rel="preload stylesheet" as=style>
-<link rel=icon href=//cristeandrei.github.io/icons/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=//cristeandrei.github.io/icons/favicon-16x16.png>
-<link rel=icon type=image/png sizes=32x32 href=//cristeandrei.github.io/icons/favicon-32x32.png>
-<link rel=apple-touch-icon href=//cristeandrei.github.io/icons/apple-touch-icon.png>
-<link rel=mask-icon href=//cristeandrei.github.io/icons/safari-pinned-tab.svg>
+<link rel=icon href=//cristeandrei.github.io/blog/icons/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=//cristeandrei.github.io/blog/icons/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=//cristeandrei.github.io/blog/icons/favicon-32x32.png>
+<link rel=apple-touch-icon href=//cristeandrei.github.io/blog/icons/apple-touch-icon.png>
+<link rel=mask-icon href=//cristeandrei.github.io/blog/icons/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <link rel=alternate type=application/rss+xml href=//cristeandrei.github.io/blog/index.xml>
@@ -28,7 +28,7 @@
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Blog">
 <meta name=twitter:description content="Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Blog","url":"//cristeandrei.github.io/blog/","description":"Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.","thumbnailUrl":"//cristeandrei.github.io/icons/favicon.ico","sameAs":["https://github.com/CristeAndrei","https://linkedin.com/in/andrei-criste-251311218/","mailto:cristeandreiflorin@gmail.com"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Blog","url":"//cristeandrei.github.io/blog/","description":"Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.","thumbnailUrl":"//cristeandrei.github.io/blog/icons/favicon.ico","sameAs":["https://github.com/CristeAndrei","https://linkedin.com/in/andrei-criste-251311218/","mailto:cristeandreiflorin@gmail.com"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
