--- a/index.html
+++ b/index.html
@@ -7,35 +7,35 @@
 <title>Blog</title>
 <meta name=description content="Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.">
 <meta name=author content="Andrei Criste">
-<link rel=canonical href=//cristeandrei.github.io/blog/>
+<link rel=canonical href=https://cristeandrei.github.io/blog/>
 <link crossorigin=anonymous href=/blog/assets/css/stylesheet.8b523f1730c922e314350296d83fd666efa16519ca136320a93df674d00b6325.css integrity="sha256-i1I/FzDJIuMUNQKW2D/WZu+hZRnKE2MgqT32dNALYyU=" rel="preload stylesheet" as=style>
-<link rel=icon href=//cristeandrei.github.io/blog/icons/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=//cristeandrei.github.io/blog/icons/favicon-16x16.png>
-<link rel=icon type=image/png sizes=32x32 href=//cristeandrei.github.io/blog/icons/favicon-32x32.png>
-<link rel=apple-touch-icon href=//cristeandrei.github.io/blog/icons/apple-touch-icon.png>
-<link rel=mask-icon href=//cristeandrei.github.io/blog/icons/safari-pinned-tab.svg>
+<link rel=icon href=https://cristeandrei.github.io/blog/icons/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=https://cristeandrei.github.io/blog/icons/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=https://cristeandrei.github.io/blog/icons/favicon-32x32.png>
+<link rel=apple-touch-icon href=https://cristeandrei.github.io/blog/icons/apple-touch-icon.png>
+<link rel=mask-icon href=https://cristeandrei.github.io/blog/icons/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<link rel=alternate type=application/rss+xml href=//cristeandrei.github.io/blog/index.xml>
-<link rel=alternate type=application/json href=//cristeandrei.github.io/blog/index.json>
+<link rel=alternate type=application/rss+xml href=https://cristeandrei.github.io/blog/index.xml>
+<link rel=alternate type=application/json href=https://cristeandrei.github.io/blog/index.json>
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
 </noscript><meta property="og:title" content="Blog">
 <meta property="og:description" content="Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="//cristeandrei.github.io/blog/">
+<meta property="og:url" content="https://cristeandrei.github.io/blog/">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Blog">
 <meta name=twitter:description content="Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Blog","url":"//cristeandrei.github.io/blog/","description":"Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.","thumbnailUrl":"//cristeandrei.github.io/blog/icons/favicon.ico","sameAs":["https://github.com/CristeAndrei","https://linkedin.com/in/andrei-criste-251311218/","mailto:cristeandreiflorin@gmail.com"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Blog","url":"https://cristeandrei.github.io/blog/","description":"Welcome to my blog, here I post small projects about technologies I find interesting and document my learning journey.","thumbnailUrl":"https://cristeandrei.github.io/blog/icons/favicon.ico","sameAs":["https://github.com/CristeAndrei","https://linkedin.com/in/andrei-criste-251311218/","mailto:cristeandreiflorin@gmail.com"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=//cristeandrei.github.io/blog/ accesskey=h title="Blog (Alt + H)">Blog</a>
+<a href=https://cristeandrei.github.io/blog/ accesskey=h title="Blog (Alt + H)">Blog</a>
 <div class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -43,17 +43,17 @@
 </div>
 <ul id=menu>
 <li>
-<a href=//cristeandrei.github.io/blog/archives title=archives>
+<a href=https://cristeandrei.github.io/blog/archives title=archives>
 <span>archives</span>
 </a>
 </li>
 <li>
-<a href=//cristeandrei.github.io/blog/search title="search (Alt + /)" accesskey=/>
+<a href=https://cristeandrei.github.io/blog/search title="search (Alt + /)" accesskey=/>
 <span>search</span>
 </a>
 </li>
 <li>
-<a href=//cristeandrei.github.io/blog/tags title=tags>
+<a href=https://cristeandrei.github.io/blog/tags title=tags>
 <span>tags</span>
 </a>
 </li>
@@ -88,11 +88,11 @@ Welcome to my blog, here I post small projects about technologies I find interes
 <p>Mobile first PWA for keeping track of expenses and income, and for providing other useful functionalities.</p>
 </div>
 <footer class=entry-footer><span title="2022-07-22 00:00:00 +0000 UTC">July 22, 2022</span>&nbsp;·&nbsp;14 min&nbsp;·&nbsp;Andrei Criste</footer>
-<a class=entry-link aria-label="post link to Personal finances PWA" href=//cristeandrei.github.io/blog/posts/projects/personal-finances/></a>
+<a class=entry-link aria-label="post link to Personal finances PWA" href=https://cristeandrei.github.io/blog/posts/projects/personal-finances/></a>
 </article>
 </main>
 <footer class=footer>
-<span>&copy; 2022 <a href=//cristeandrei.github.io/blog/>Blog</a></span>
+<span>&copy; 2022 <a href=https://cristeandrei.github.io/blog/>Blog</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
